<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.cse100.wi16.tritonstudy.login"
    android:background="#2b92b9">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout"
        android:background="#2b92b9">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:id="@+id/login_imgUCSDLogo"
            android:background="@drawable/logo_ucsd"/>
            <!--android:layout_marginTop="10dp" />-->

        <ImageView
            android:layout_width="198dp"
            android:layout_height="190dp"
            android:id="@+id/login_imgTritonStudyLogo"
            android:background="@drawable/logo_tritonstudy"
            android:layout_gravity="center_horizontal"
            android:baselineAlignBottom="false" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/login_tvEmail"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/labelUsername"
                android:textColor="#ffffff" />

            <EditText
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:id="@+id/login_etEmail"
                android:layout_row="0"
                android:layout_column="1"
                android:singleLine="true"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/login_tvPassword"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/labelPass"
                android:textColor="#ffffff" />

            <!--<EditText-->
                <!--android:layout_width="248dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:inputType="textPassword"-->
                <!--android:id="@+id/login_etPassword"-->
                <!--android:layout_row="1"-->
                <!--android:layout_column="1"-->
                <!--android:textColor="#ffffff"/>-->

            <EditText
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:id="@+id/login_etPassword"
                android:layout_row="1"
                android:layout_column="1"
                android:singleLine="true"
                android:textColor="#ffffff" />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp">

                <!--<Button-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="40dp"-->
                    <!--android:text="@string/buttonForgotPass"-->
                    <!--android:id="@+id/login_btnForgotPassword"-->
                    <!--android:layout_row="1"-->
                    <!--android:layout_column="0"-->
                    <!--android:textColor="#ffffff"-->
                    <!--android:background="#ff8700"-->
                    <!--android:padding="12dp"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:layout_margin="4dp" />-->

                <Button
                    android:layout_width="192dp"
                    android:layout_height="40dp"
                    android:text="Create New User"
                    android:id="@+id/login_btnNewUser"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_gravity="center|left"
                    android:textColor="#ffffff"
                    android:background="#ff8700"
                    android:padding="12dp"
                    android:layout_margin="4dp"
                    android:onClick="onNewUserButtonClick"/>

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="192dp"
                    android:layout_height="40dp"
                    android:text="@string/buttonLogin"
                    android:id="@+id/login_btnSignIn"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_gravity="center"
                    android:background="#ff8700"
                    android:textColor="#ffffff"
                    android:padding="12dp"
                    android:layout_margin="4dp"
                    android:onClick="onSignInButtonClick" />
            </GridLayout>

        </GridLayout>

    </LinearLayout>

</RelativeLayout>
