...
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/main_greeting"
            android:layout_row="0"
            android:contentDescription="main_menu_title"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_column="0"
            android:textColor="#ffffff" />
...

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="Log Out"
            android:id="@+id/main_btnLogOut"
            android:layout_row="0"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="15dp"
            android:layout_column="0"
            android:textColor="#ffffff"
            android:background="#ff8700"
...
