<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#2b92b9"
    tools:context=".search">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnSpan="3"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Search by Course: "
            android:layout_row="0"
            android:layout_column="1"
            android:id="@+id/search_tvCourse"
            android:layout_gravity="center_vertical"
            android:textColor="#ffffff" />

        <Spinner
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_row="0"
            android:layout_column="3"
            android:id="@+id/search_spCourse" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Search"
                android:id="@+id/search_btnSearch"
                android:layout_marginLeft="120dp"
                android:onClick="onSearchButtonClick"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                 />
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/search_lvSearchResults"

            android:background="#ffffff" />

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginRight="48dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="89dp"
            android:layout_height="27dp"
            android:text="Back"
            android:id="@+id/choose_classes_btnBack"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:background="#ff8700"
            android:onClick="onBackButtonClick"
            android:textColor="#ffffff" />

    </LinearLayout>

    </LinearLayout>


